--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -121,6 +121,7 @@
                     'fields': ['bounding_box'],
                 },
              ],
+             'selected': true,
         },
         { 
             'name': 'temporal',
