Fixed dismiss behaviour on modal dialog (bbox widget)

--- a/ckanext/publicamundi/templates/snippets/draw-bbox-dialog.html
+++ b/ckanext/publicamundi/templates/snippets/draw-bbox-dialog.html
@@ -6,7 +6,7 @@
     aria-labelledby="{{ id }}-label" aria-hidden="true"
   >
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <a class="close cancel" aria-hidden="true">×</a>
         <h3 id="{{ id }}-label">Draw a Bounding Box</h3>
     </div>
     <div class="modal-body">
