--- a/ckanext/publicamundi/themes/geodata/templates/header.html
+++ b/ckanext/publicamundi/themes/geodata/templates/header.html
@@ -30,8 +30,9 @@
             {% block header_site_navigation_tabs %}
               {{ h.build_nav_main(
                 ('search', _('Datasets')),
-                ('organizations_index', _('Organizations')),
                 ('group_index', _('Groups')),
+                ('organizations_index', _('Organizations')),
+                ('maps', _('Maps')),
                 ('about', _('About'))
                 ) }}
             </div>
