--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -1,12 +1,10 @@
 {% ckan_extends %}
 {% block page %}
-{% block styles %}
-{{ super() }}
-    <link rel="stylesheet" href="/css/main.css" /> 
-{% endblock %}
 
-{%- block header %}
-  <header class="account-masthead">
+<div class="account-masthead-home">
+
+</div>
+<header class="account-masthead">
     <div class="container">
         {% block header_site_navigation %}
         <div id="homemenu">
@@ -14,7 +12,6 @@
         {# The .header-image class hides the main text and uses image replacement for the title #}
         <hgroup class="{{ g.header_class }}">
 
-      {% block header_logo %}
         {% if g.site_logo %}
           <a class="logo" href="{{ h.url('home') }}"><img src="{{ h.url_for_static('/images/geodata-biglogo.png') }}" alt="{{ g.site_title }} Logo" title="{{ g.site_title }} Logo" /></a>
         {% else %}
@@ -23,7 +20,6 @@
           </h1>
           {% if g.site_description %}<h2>{{ g.site_description }}</h2>{% endif %}
         {% endif %}
-      {% endblock %}
 
     </hgroup>
         </div>
@@ -43,7 +39,6 @@
           </header>
       {% endblock %}
 
-      {% endblock %}
 
 {% set homepage_style = ( g.homepage_style or '1' ) %}
 
