--- a/ckanext/publicamundi/themes/geodata/templates/home/snippets/search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/snippets/search.html
@@ -1,6 +1,6 @@
 
 {% set tags = h.get_facet_items_dict('tags', limit=3) %}
-{% set placeholder = _('eg. Gold Prices') %}
+{% set placeholder = _('Search Datasets') %}
 
       <div class="module module-search module-narrow module-shallow box">
   <form class="module-content search-form" method="get" action="{% url_for controller='package', action='search' %}">
