--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -1,8 +1,70 @@
 {% ckan_extends %}
 {% block page %}
 
-<div class="account-masthead-home">
+<div class="account-masthead" style="background-color:#F3F4F4">
+    <div class="container">
+    
+        <div class="mainmenu">
 
+{% block header_account_container_content %}
+      {% if c.userobj %}
+          <div class="account avatar authed" data-module="me" data-me="{{ c.userobj.id }}">
+              <ul class="menu">
+              {% block header_account_logged %}
+              {% if c.userobj.sysadmin %}
+                <li>
+                  <a href="{{ h.url_for(controller='admin', action='index') }}" title="{{ _('Sysadmin settings') }}">
+                  </a>
+                </li>
+              {% endif %}
+              <li>
+                <a href="{{ h.url_for(controller='user', action='read', id=c.userobj.name) }}" class="viewprofile" title="{{ _('View profile') }}">
+                  <span class="username">{{ c.userobj.display_name }}</span>
+                </a>
+                <ul>
+              {% set new_activities = h.new_activities() %}
+              <li class="notifications {% if new_activities > 0 %}notifications-important{% endif %}">
+                {% set notifications_tooltip = ngettext('Dashboard (%(num)d new item)', 'Dashboard (%(num)d new items)', new_activities) %}
+                <a href="{{ h.url_for(controller='user', action='dashboard') }}" title="{{ notifications_tooltip }}">
+                  <span>{{ new_activities }}</span>
+                      <span>{{ _('Activities')}}</span>
+                </a>
+              </li>
+              {% block header_account_settings_link %}
+                <li>
+                  <a href="{{ h.url_for(controller='user', action='edit', id=c.userobj.name) }}" title="{{ _('Edit settings') }}">
+                      <span>{{ _('Settings')}}</span>
+                  </a>
+                </li>
+              {% endblock %}
+              {% block header_account_log_out_link %}
+                <li>
+                  <a href="{{ h.url_for('/user/_logout') }}" title="{{ _('Log out') }}">
+                      <span>{{ _('Logout')}}</span>
+                  </a>
+                </li>
+                {% endblock %}
+            </ul>
+            </li>
+            {% endblock %}
+            </ul>
+          </div>
+        {% else %}
+          <nav class="account not-authed">
+            <ul class="unstyled">
+              {% block header_account_notlogged %}
+              <li>{% link_for _('Log in'), controller='user', action='login' %}</li>
+              {% if h.check_access('user_create') %}
+                <li>{% link_for _('Register'), controller='user', action='register', class_='sub' %}</li>
+              {% endif %}
+              {% endblock %}
+            </ul>
+          </nav>
+        {% endif %}
+      {% endblock %}
+
+</div>
+</div>
 </div>
 <header class="account-masthead">
     <div class="container">
@@ -28,8 +90,9 @@
             {% block header_site_navigation_tabs %}
               {{ h.build_nav_main(
                 ('search', _('Datasets')),
-                ('organizations_index', _('Organizations')),
                 ('group_index', _('Groups')),
+                ('organizations_index', _('Organizations')),
+                ('maps', _('Maps')),
                 ('about', _('About'))
                 ) }}
             </div>
