--- a/ckanext/publicamundi/themes/geodata/templates/organization/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/index.html
@@ -11,7 +11,7 @@
 {% block searchbar %}
 {% block organizations_search_form %}
 <div class="searchbar">
-    {% snippet 'snippets/search_form.html', type='organization', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search organizations...'), show_empty=request.params, no_bottom_border=true if c.page.items %}
+    {% snippet 'snippets/search_form_top.html', type='organization', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search organizations...'), show_empty=request.params, no_bottom_border=true if c.page.items %}
 </div>
   {% endblock %}
 
