--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
@@ -10,14 +10,17 @@
   {% block search_input %}
  
   <div class="searchfw search-input control-group {{ search_class }}">
+      <div class="container">
       <input type="text" class="search" name="q" value="{{ query }}" autocomplete="off" placeholder="{{ placeholder }}">
       <button type="submit" value="search">
         <i class="icon-search"></i>
         <span>{{ _('Submit') }}</span>
     </button>
     </div>
+    </div>
     {% endblock %}
 
+    <div class="container">
   {% block search_search_fields %}
     {% if fields -%}
       <span>{{ form.hidden_from_list(fields=fields) }}</span>
@@ -81,3 +84,4 @@
   {% endtrans %}
   {% endif %}
 
+        </div>
