--- a/ckanext/publicamundi/themes/geodata/templates/home/layout1.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/layout1.html
@@ -11,7 +11,7 @@
 <div id="package-list-home">
 <div class="container">
     <h4>{{ _('Latest Updates') }}</h4>
-    {% snippet 'snippets/package_list.html', packages = h.newest_datasets().get('results'), hide_resources=true %}
+    {% snippet 'snippets/package_list_home.html', packages = h.newest_datasets().get('results'), hide_resources=true %}
 </div>
 </div>
 </div>
